<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SportShop</string>

    <string name="authorization">Авторизация</string>
    <string name="sign_up">Регистрация</string>
    <string name="sign_in">Войти</string>

    <string name="login_hint">Введите логин</string>
    <string name="password_hint">Введите пароль</string>
    <string name="repeat_password_hint">Повторите пароль</string>
    <string name="login_signup_hint">Придумайте логин</string>
    <string name="password_signup_hint">Придумайте пароль</string>
    <string name="sign_up_button">Зарегистрироваться</string>
    <string name="password_repeat_hint">Повторите пароль</string>
    <string name="search">Поиск</string>
    <string name="description">Подробное описание</string>
    <string name="hat1">Бейсболка Ravens белая </string>
    <string name="sweatshirt1">Толстовка Ravens </string>
    <string name="t_shirt1">Футболка Ravens </string>
    <string name="categories">Категории</string>
    <string name="hats">Кепки</string>
    <string name="sweatshirts">Толстовки</string>
    <string name="t_shirts">Футболки</string>
    <string name="price">1000</string>
    <string name="rub">₽</string>
    <string name="manufacturer">Производитель</string>
    <string name="buy_for">"Купить за "</string>
    <string name="error">Произошла непредвиденная ошибка</string>
    <string name="refresh">Обновить</string>
</resources>
