<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_categories"
        style="@style/TextAppearance.H1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_100"
        android:layout_marginTop="@dimen/normal_100"
        android:text="@string/categories"
        app:layout_constraintBottom_toTopOf="@+id/bt_hats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/bt_hats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_100"
        android:layout_marginTop="@dimen/normal_200"
        android:layout_marginEnd="@dimen/normal_100"
        android:text="@string/hats"
        app:layout_constraintBottom_toTopOf="@+id/bt_sweatshirts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_categories"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/bt_sweatshirts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_100"
        android:layout_marginTop="@dimen/normal_200"
        android:layout_marginEnd="@dimen/normal_100"
        android:text="@string/sweatshirts"
        app:layout_constraintBottom_toTopOf="@+id/bt_t_shirts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_hats"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/bt_t_shirts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_100"
        android:layout_marginTop="@dimen/normal_200"
        android:layout_marginEnd="@dimen/normal_100"
        android:text="@string/t_shirts"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_sweatshirts"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>