<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_min_height"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primary"
            android:backgroundTint="@color/primary"
            app:contentInsetStartWithNavigation="0dp"
            app:navigationIcon="@drawable/ic_back">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/iv_item_details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar_layout"
        app:layout_constraintVertical_bias="0.016"
        tools:srcCompat="@drawable/ic_hat1" />

    <TextView
        android:id="@+id/tv_title_details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="76dp"
        android:lines="1"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toEndOf="@+id/iv_item_details"
        app:layout_constraintTop_toBottomOf="@id/appbar_layout"
        tools:text="@string/hat1" />

    <TextView
        android:id="@+id/tv_description_details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:lines="4"
        android:textSize="@dimen/text_size_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_manufacturer_details"
        app:layout_constraintVertical_bias="0.11"
        tools:text="@string/description" />

    <TextView
        android:id="@+id/tv_manufacturer_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manufacturer"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/iv_item_details"
        tools:layout_editor_absoluteY="48dp" />

    <Button
        android:id="@+id/buttonBuy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary"
        android:textColor="@color/white"
        android:layout_marginStart="@dimen/normal_100"
        android:layout_marginTop="@dimen/normal_200"
        android:layout_marginEnd="@dimen/normal_100"
        android:layout_marginBottom="@dimen/normal_100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
